<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:contentDescription="@string/image_back"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTrackName"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:textColor="@color/color_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back"
        tools:text="@string/title_track_name" />

    <TextView
        android:id="@+id/textArtistName"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:textColor="@color/color_black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@id/textTrackName"
        tools:text="@string/title_artist_name" />

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_artwork"
        android:elevation="@dimen/dp_2"
        android:scaleType="centerCrop"
        android:src="@mipmap/genre_audio"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <ImageView
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:contentDescription="@string/image_download"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_download"
        app:layout_constraintStart_toStartOf="@id/seekTime"
        app:layout_constraintTop_toBottomOf="@+id/seekTime" />

    <ImageView
        android:id="@+id/playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:contentDescription="@string/image_playlist"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_playlist"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/seekTime" />

    <SeekBar
        android:id="@+id/seekTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:progressTint="@color/color_seek_time"
        android:thumbTint="@color/color_seek_time"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/artwork" />

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@id/seekTime"
        app:layout_constraintEnd_toStartOf="@id/seekTime"
        app:layout_constraintTop_toTopOf="@id/seekTime" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@id/seekTime"
        app:layout_constraintStart_toEndOf="@id/seekTime"
        app:layout_constraintTop_toTopOf="@id/seekTime" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom" />

    <ImageView
        android:id="@+id/shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_shuffle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_shuffle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view" />

    <ImageView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_previous"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="@id/shuffle"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintStart_toEndOf="@+id/shuffle" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_play"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_pause"
        app:layout_constraintBottom_toBottomOf="@id/shuffle"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/previous" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_next"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@id/shuffle"
        app:layout_constraintEnd_toStartOf="@+id/loop"
        app:layout_constraintStart_toEndOf="@+id/play" />

    <ImageView
        android:id="@+id/loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_loop"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_repeat"
        app:layout_constraintBottom_toBottomOf="@id/shuffle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/next" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
