<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:contentDescription="@string/card_view"
        app:cardCornerRadius="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/genreImage"
            android:layout_width="@dimen/dp_128"
            android:layout_height="@dimen/dp_128"
            android:contentDescription="@string/image_genre"
            android:src="@mipmap/genre_audio" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:textColor="@color/color_black"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        tools:text="@string/all_music" />
</androidx.constraintlayout.widget.ConstraintLayout>
