<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_48"
    android:background="@color/color_white">

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:contentDescription="@string/image_artwork"
        android:scaleType="centerCrop"
        android:src="@mipmap/genre_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTrackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/color_black"
        app:layout_constraintBottom_toTopOf="@id/textArtistName"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/artwork"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/artwork"
        app:layout_constraintTop_toBottomOf="@id/textTrackName" />

    <ImageView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_2"
        android:contentDescription="@string/image_previous"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_previous"
        android:tint="@color/color_black"
        app:layout_constraintBottom_toBottomOf="@id/next"
        app:layout_constraintEnd_toStartOf="@id/play"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/next" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_2"
        android:contentDescription="@string/image_play"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_play"
        android:tint="@color/color_black"
        app:layout_constraintBottom_toBottomOf="@id/next"
        app:layout_constraintEnd_toStartOf="@id/next"
        app:layout_constraintStart_toEndOf="@id/previous"
        app:layout_constraintTop_toTopOf="@id/next" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_2"
        android:contentDescription="@string/image_next"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_next"
        android:tint="@color/color_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/play"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>
